--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,27 @@
 
     <version>1.0-SNAPSHOT</version>
     <name>study-dsa</name>
+    <description>Study Data Structure and Algorithm</description>
+    <url>www.jaylim.io</url>
 
-    <parent>
-        <groupId>io.jaylim.study</groupId>
-        <artifactId>study-archive</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+    <developers>
+        <developer>
+            <name>Jay Lim</name>
+            <url>None</url>
+            <roles>
+                <role>Study Hard</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <encodingType>utf-8</encodingType>
+    </properties>
 
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -24,4 +38,29 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- compile plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <encoding>${encodingType}</encoding>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+
+            <!-- unit test plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14</version>
+                <configuration>
+                    <argLine>-Dfile.encoding=${encodingType}</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
